# AbletonGPT0.2

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.json  pyproject.toml
ableton_remote_script/AbletonGPT/: __init__.py
docs/: ARCHITECTURE.md  CLI_ARRANGE_JA.md  CLI_ENGINES_JA.md  EXTENSIONS_SDK.md  QUICKSTART_JA.md  ROADMAP.md
examples/: mcp-config.example.json  prompts_ja.md
exports/: test002_MASTER_-9LUFS_-1dBTP.wav.asd
extensions/AbletonGPT/: .env.example  .gitignore  README.md  (+4 more)
lyrics/: neon_mutation.md
outputs/: AbletonGPT_プロジェクト概要.txt  VERIFICATION_2026-07-19_JA.md  live_verification_20260719_010623.json
scripts/: render_gain_master.py  run_checks.py  setup_macos.py  verify_live_integration.py
tests/: test_ableton_step_executor.py  test_arrange_engine.py  test_audio_bands.py  test_audio_beats.py  test_audio_chords.py  test_audio_key.py  test_audio_melody.py  test_audio_onsets.py  test_audio_spectral.py  test_audio_stereo.py  test_audio_structure.py  test_audio_tempo.py  test_backend_fallback.py  test_backend_selection.py  test_bridge.py  test_cli_arrange.py  test_cli_arrange_run.py  test_cli_compose.py  test_cli_contextual.py  test_cli_expression.py  test_cli_instruments.py  test_cli_jobs.py  test_cli_loudness.py  test_cli_main.py  test_cli_vocal.py  test_extensions_bridge.py  test_groove.py  test_harmony.py  test_job_resume.py  test_job_runner.py  test_job_runner_persistence.py  test_job_store.py  test_layering.py  test_meters.py  test_notelength.py  test_phrase.py  test_progression.py  test_quantize.py  test_reference.py  test_remap.py  (+30 more)
(+63 files in other folders)
