[project]
name = "abletongpt"
version = "0.2.0"
description = "AI composition, loudness analysis, and safety-first MCP control for Ableton Live"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AbletonGPT contributors"}]
keywords = ["ableton", "mcp", "music", "composition", "loudness", "ai"]
requires-python = ">=3.11"
dependencies = ["mcp>=1.25,<2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
abletongpt = "abletongpt.server:main"
abletongpt-doctor = "abletongpt.doctor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abletongpt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
